@@ -28,9 +28,26 @@ val b = fibTail(12)
 
 //zadanie 4
 
+val x = 0
+
+def list1 = List(-2,-1,0,1,2)
+def list2 = List((1, 2), (0, 1))
+
+//pasujące wzorce:
+//a:
+
+List(_,_,x,_,_)
+_::_::x::_::_
+
+//b:
+
+List((_,_),(x,_))
+_::List((x,_))
 
 //zadanie 5
 
+
+//xs to segment listy, ys to lista
 def initSegment [A](xs:List[A], ys:List[A]):Boolean =
   (xs, ys) match{
   case (Nil, _) => true
@@ -39,9 +56,20 @@ def initSegment [A](xs:List[A], ys:List[A]):Boolean =
             else false
 }
 
+initSegment(List(1,2,3), List(1,2,3,4))
 
-  
-  
+//zadanie 6
+
+def replaceNth [A](xs:List[A], index:Int, x:A):List[A] =
+  (xs, index) match {
+  case (Nil,_) => Nil
+  case (h::t, 0) => x::t
+  case (h::t, _) => h::replaceNth(t, index-1, x)
+}
+ 
+replaceNth(List(1,2,3,4,6), 3, 2)
+
+
   
   
   
